--- a/postgres-exporter/postgresql-exporter-values.yaml
+++ b/postgres-exporter/postgresql-exporter-values.yaml
@@ -15,7 +15,7 @@ config:
       name: postgresql-secret
       key: POSTGRES_PASSWORD
     port: "5432"
-    # database: "postgres"  
+    database: "postgres"  
 
 serviceMonitor:
   enabled: true
